# tcdlibx

./: CITATION.cff  LICENSE  README.md  pyproject.toml
progs/: calc_vcd.py  calc_vtcd.py  check_dipoles.py  cubevis.py  plot_etcd_quiv2D.py  plot_vtcd_quiv2D.py  tcdvis.py
scripts/: helper_for_test.py
tcdlibx/calc/: __init__.py  cube_manip.py
tcdlibx/graph/: cube_graphic.py  cube_graphvtk.py  helpers.py
tcdlibx/gui/: dialogs.py
tcdlibx/io/: __init__.py  fchk_io.py  jsonio.py
tcdlibx/utils/: geom_manip.py  var_tools.py  vtk_utils.py
